# sample-workflow-rdb

./: .gitignore  .remarkignore  .remarkrc.mjs  .sql-formatter.json  .tbls.yml  .textlintrc.json  CONTRIBUTING.md  LICENSE  README.md  index.html  mise.ci.toml  mise.toml  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-and-deploy.yml
docker/: Dockerfile.tbls  compose.yaml
docs/: index.md
docs/javascripts/: tablesort.js
docs/schema/: README.md  m_company.md  m_employee.md  m_employee_account.md  m_employee_delegate.md  m_employee_delegate_scope.md  m_employee_preference.md  m_organization.md  m_permission.md  m_position.md  m_role.md  m_role_permission.md
excel/: schema.xlsx
main/: 404.html  index.html
main/schema/: index.html  schema.json
main/schema/m_company/: index.html
main/schema/m_employee/: index.html
main/schema/m_employee_account/: index.html
main/schema/m_employee_delegate/: index.html
main/schema/m_employee_delegate_scope/: index.html
main/schema/m_employee_preference/: index.html
main/schema/m_organization/: index.html
main/schema/m_permission/: index.html
main/schema/m_position/: index.html
main/schema/m_role/: index.html
main/schema/m_role_permission/: index.html
main/search/: search_index.json
sql/migration/: README.md  V20250506_010__ddl_init_db.sql  V20250506_020__ddl_init_schema.sql
sql/seed/: README.md
sql/seed/local/: V20250506_050__dml_init_data.sql
