[project]
name = "sample-workflow-rdb"
version = "0.1.0"
description = ""
authors = [
    {name = "Yui Semba",email = "65758369+semba-yui@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.8,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
mdx-truly-sane-lists = "^1.3"
mkdocs-glightbox = "^0.4.0"
mkdocs-git-authors-plugin = "^0.9.5"
mkdocs-git-revision-date-localized-plugin = "^1.4.5"
mkdocs-mermaid2-plugin = "^1.2.1"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocs-exclude = "^1.0.2"
pymarkdownlnt = "^0.9.29"
pymdown-extensions = "^10.14.3"
mkdocs-awesome-nav = "^3.1.1"

[tool.poetry.scripts]
serve = "mkdocs:serve"
build = "mkdocs:build"
